Bug #58063  	rpl_server_uuid segfaults on win

This is an intermediate patch to get more details out of the failure.